--- a/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/ElementCompetence/Delete.cshtml
+++ b/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/ElementCompetence/Delete.cshtml
@@ -21,12 +21,21 @@
 
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
-            <p>Êtes-vous certain de vouloir supprimer cet élément de compétence?</p>
+            @if (Model.PlanCadreElement.Count() > 0)
+            {
+                <p>Vous ne pouvez pas supprimer cette élément, il est lier à des plans plan cadres</p>
+            }
+            else
+            {
+                <p>Êtes-vous certain de vouloir supprimer cet élément de compétence?</p>
 
-            <hr />
+                <hr />
 
-            <input type="submit" value="Confirmer" class="fancy-button" />
+                <input type="submit" value="Confirmer" class="fancy-button" />
+            }
+            
             <div class="fancy-button rouge" onclick="location.href='@Url.Action("Info", "ElementCompetence", new { idElement = Model.idElement })'">Annuler</div>
+            
 
         </div>
     </div>
