--- a/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/Account/Edit.cshtml
+++ b/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/Account/Edit.cshtml
@@ -109,6 +109,9 @@
 @section scripts {
     <script>
         $(document).ready(function () {
+            initRoleDropDown();
+            initCodeProgrammeDropDown();
+
             @foreach (string role in Model.Roles)
             {
                 @:loadRole("@role");
