--- a/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/GrilleCours/Info.cshtml
+++ b/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/GrilleCours/Info.cshtml
@@ -14,7 +14,7 @@
 
 @Html.Action("_TreeView")
 
-<div class="super-view">
+<div class="super-view section-grille">
 
     <header class="fat-header">
 
