--- a/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/ConsoleDevisMinistere/_PartialList.cshtml
+++ b/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/ConsoleDevisMinistere/_PartialList.cshtml
@@ -45,7 +45,7 @@
             <td class="action-cell">
                 @if(valide)
                 {
-                    <a href='@Url.Action("DeleteConfirmed", new { id = item.idDevis })'>
+                    <a href='@Url.Action("Delete", new { id = item.idDevis })'>
                         <span class="glyphicon glyphicon-trash"></span>
                     </a>
                 }
