--- a/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/recherche/recherche.cshtml
+++ b/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/recherche/recherche.cshtml
@@ -9,7 +9,7 @@
         <div class="form-box">
             <div id="searchForm">
 
-                <input type="text" class="form-control" placeholder="Search" id="Stxt" name="searchStr">
+                <input type="text" class="form-control" placeholder="Recherche" id="Stxt" name="searchStr">
                 <button type="submit" id="searchBtn"><span class="glyphicon glyphicon-search"></span></button>
 
                 <div>
