push des dossier pour le plan cadre

--- a/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/PlanCadre/Competence.cshtml
+++ b/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/PlanCadre/Competence.cshtml
@@ -10,6 +10,7 @@
 {
     @Html.AntiForgeryToken()
 
+    @Html.HiddenFor(model => model.idProgramme)
     @Html.HiddenFor(model => model.idPlanCadre)
 
     <div class="form-group">
