--- a/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/GrilleCours/_Structure.cshtml
+++ b/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/GrilleCours/_Structure.cshtml
@@ -64,7 +64,7 @@
                                 {
                                     if (cours.PlanCadre.idType == 2)
                                     {
-                                        <tr class="warning">
+                                        <tr class="warning" id="collapseTest" aria-expanded="false">
                                             <td id="infobulle"><b>@cours.PlanCadre.titreCours.Substring(0, 7)</b> <span>@cours.PlanCadre.titreCours (@cours.PlanCadre.numeroCours)</span> </td>
                                         </tr>
                                     }
