--- a/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/Account/Edit.cshtml
+++ b/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/Account/Edit.cshtml
@@ -22,6 +22,8 @@
 
                     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
+                    @Html.ValidationMessage("netMail", new { @class = "text-danger" })
+
                     @Html.ValidationMessage("rolePresent", new { @class = "text-danger" })
 
                     @Html.ValidationMessage("programmeRCP", new { @class = "text-danger" })
