--- a/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/EnonceCompetence/Delete.cshtml
+++ b/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/EnonceCompetence/Delete.cshtml
@@ -22,17 +22,16 @@
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
            
-            @if(Model.PlanCadreEnonce.Count()>0)
+            @if (Model.PlanCadreEnonce.Count() > 0) 
             {
-                <p>Vous ne pouvez pas supprimer cette énoncé, il est lier à des plans plan cadres</p>
-                
+                <p>Cette énoncé est liée à des plans cadre, la suppression est impossible.</p>
             }
             else
             {
                 if (Model.ElementCompetence.Count() > 0)
                 {
                     <p>Si vous supprimez cette compétence, vous supprimez aussi les éléments de compétence suivants.</p>
-                    <p>Êtes-vous certain de vouloir supprimer cet énoncé de compétence?</p>
+                    
                     foreach (var elementCompetence in Model.ElementCompetence)
                     {
                         <a class="info-child clearfix" href='@Url.Action("Info", "ElementCompetence", new { idElement = elementCompetence.idElement })'>
@@ -40,13 +39,12 @@
                         </a>
                     }
                 }
+
+                <p>Êtes-vous certain de vouloir supprimer cet énoncé de compétence?</p>
+
+                <hr />
                 <input type="submit" value="Confirmer" class="fancy-button" />
-
             }
-
-            
-
-            <hr />
             
             <div class="fancy-button rouge" onclick="location.href='@Url.Action("Info", "EnonceCompetence", new { idCompetence = Model.idCompetence })'">Annuler</div>
 
